modified:   notebooks/DeepLearning_GridSearch.ipynb 	modified:   notebooks/core/parameters.py

--- a/notebooks/DeepLearning_GridSearch.ipynb
+++ b/notebooks/DeepLearning_GridSearch.ipynb
@@ -80,166 +80,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Combinations: 18\n",
+      "Total Combinations: 2\n",
       "\n",
       "1\n",
-      " Input Size: 299\n",
-      " Dataset Frac.: 0.1\n",
+      " Input Size: 512\n",
+      " Dataset Frac.: 0.5\n",
       " Batch Size: 64\n",
-      " Model: ResNet50AttentionPre\n",
+      " Model: ResNet101AttentionPre\n",
       " Scheduler: None\n",
       " Optimizer: Adam0001\n",
       " Loss: SmoothL1Loss\n",
       "\n",
       "2\n",
-      " Input Size: 299\n",
-      " Dataset Frac.: 0.1\n",
-      " Batch Size: 64\n",
-      " Model: ResNet101AttentionPre\n",
-      " Scheduler: None\n",
-      " Optimizer: Adam0001\n",
-      " Loss: SmoothL1Loss\n",
-      "\n",
-      "3\n",
-      " Input Size: 299\n",
-      " Dataset Frac.: 0.1\n",
-      " Batch Size: 128\n",
-      " Model: ResNet50AttentionPre\n",
-      " Scheduler: None\n",
-      " Optimizer: Adam0001\n",
-      " Loss: SmoothL1Loss\n",
-      "\n",
-      "4\n",
-      " Input Size: 299\n",
-      " Dataset Frac.: 0.1\n",
-      " Batch Size: 128\n",
-      " Model: ResNet101AttentionPre\n",
-      " Scheduler: None\n",
-      " Optimizer: Adam0001\n",
-      " Loss: SmoothL1Loss\n",
-      "\n",
-      "5\n",
-      " Input Size: 299\n",
-      " Dataset Frac.: 0.1\n",
-      " Batch Size: 200\n",
-      " Model: ResNet50AttentionPre\n",
-      " Scheduler: None\n",
-      " Optimizer: Adam0001\n",
-      " Loss: SmoothL1Loss\n",
-      "\n",
-      "6\n",
-      " Input Size: 299\n",
-      " Dataset Frac.: 0.1\n",
-      " Batch Size: 200\n",
-      " Model: ResNet101AttentionPre\n",
-      " Scheduler: None\n",
-      " Optimizer: Adam0001\n",
-      " Loss: SmoothL1Loss\n",
-      "\n",
-      "7\n",
-      " Input Size: 384\n",
-      " Dataset Frac.: 0.1\n",
+      " Input Size: 512\n",
+      " Dataset Frac.: 0.5\n",
       " Batch Size: 64\n",
       " Model: ResNet50AttentionPre\n",
-      " Scheduler: None\n",
-      " Optimizer: Adam0001\n",
-      " Loss: SmoothL1Loss\n",
-      "\n",
-      "8\n",
-      " Input Size: 384\n",
-      " Dataset Frac.: 0.1\n",
-      " Batch Size: 64\n",
-      " Model: ResNet101AttentionPre\n",
-      " Scheduler: None\n",
-      " Optimizer: Adam0001\n",
-      " Loss: SmoothL1Loss\n",
-      "\n",
-      "9\n",
-      " Input Size: 384\n",
-      " Dataset Frac.: 0.1\n",
-      " Batch Size: 128\n",
-      " Model: ResNet50AttentionPre\n",
-      " Scheduler: None\n",
-      " Optimizer: Adam0001\n",
-      " Loss: SmoothL1Loss\n",
-      "\n",
-      "10\n",
-      " Input Size: 384\n",
-      " Dataset Frac.: 0.1\n",
-      " Batch Size: 128\n",
-      " Model: ResNet101AttentionPre\n",
-      " Scheduler: None\n",
-      " Optimizer: Adam0001\n",
-      " Loss: SmoothL1Loss\n",
-      "\n",
-      "11\n",
-      " Input Size: 384\n",
-      " Dataset Frac.: 0.1\n",
-      " Batch Size: 200\n",
-      " Model: ResNet50AttentionPre\n",
-      " Scheduler: None\n",
-      " Optimizer: Adam0001\n",
-      " Loss: SmoothL1Loss\n",
-      "\n",
-      "12\n",
-      " Input Size: 384\n",
-      " Dataset Frac.: 0.1\n",
-      " Batch Size: 200\n",
-      " Model: ResNet101AttentionPre\n",
-      " Scheduler: None\n",
-      " Optimizer: Adam0001\n",
-      " Loss: SmoothL1Loss\n",
-      "\n",
-      "13\n",
-      " Input Size: 512\n",
-      " Dataset Frac.: 0.1\n",
-      " Batch Size: 64\n",
-      " Model: ResNet50AttentionPre\n",
-      " Scheduler: None\n",
-      " Optimizer: Adam0001\n",
-      " Loss: SmoothL1Loss\n",
-      "\n",
-      "14\n",
-      " Input Size: 512\n",
-      " Dataset Frac.: 0.1\n",
-      " Batch Size: 64\n",
-      " Model: ResNet101AttentionPre\n",
-      " Scheduler: None\n",
-      " Optimizer: Adam0001\n",
-      " Loss: SmoothL1Loss\n",
-      "\n",
-      "15\n",
-      " Input Size: 512\n",
-      " Dataset Frac.: 0.1\n",
-      " Batch Size: 128\n",
-      " Model: ResNet50AttentionPre\n",
-      " Scheduler: None\n",
-      " Optimizer: Adam0001\n",
-      " Loss: SmoothL1Loss\n",
-      "\n",
-      "16\n",
-      " Input Size: 512\n",
-      " Dataset Frac.: 0.1\n",
-      " Batch Size: 128\n",
-      " Model: ResNet101AttentionPre\n",
-      " Scheduler: None\n",
-      " Optimizer: Adam0001\n",
-      " Loss: SmoothL1Loss\n",
-      "\n",
-      "17\n",
-      " Input Size: 512\n",
-      " Dataset Frac.: 0.1\n",
-      " Batch Size: 200\n",
-      " Model: ResNet50AttentionPre\n",
-      " Scheduler: None\n",
-      " Optimizer: Adam0001\n",
-      " Loss: SmoothL1Loss\n",
-      "\n",
-      "18\n",
-      " Input Size: 512\n",
-      " Dataset Frac.: 0.1\n",
-      " Batch Size: 200\n",
-      " Model: ResNet101AttentionPre\n",
       " Scheduler: None\n",
       " Optimizer: Adam0001\n",
       " Loss: SmoothL1Loss\n",
@@ -929,95 +785,17 @@
      "output_type": "stream",
      "text": [
       "Let's use [0, 1, 2, 3] GPUs!\n",
-      "ResNet50Attention_Inp299-DatasetMeanStd-Data0.1-Bch64-ResNet50AttentionPre-None-Adam0001-SmoothL1Loss\n",
+      "Loading state dict from checkpoint \n",
+      "\t /mnt/diabetic_retinopathy_v3/models/ResNet101Attention_Inp512-DatasetMeanStd-Data0.5-Bch64-ResNet101AttentionPre-None-Adam0001-SmoothL1Loss_loss0.1662900413546895.pt\n",
+      "ResNet101Attention_Inp512-DatasetMeanStd-Data0.5-Bch64-ResNet101AttentionPre-None-Adam0001-SmoothL1Loss\n",
       "----------------------------------------------------------------------------------------------------\n",
       "Epoch 0/9\n",
       "----------\n",
       "Learning Rate: 0.0001\n",
-      "train Loss: 0.3663 KAPPA: 0.1362\n",
-      "val Loss: 0.5169 KAPPA: 0.4151\n",
+      "train Loss: 0.1688 KAPPA: 0.7330\n",
+      "val Loss: 0.1634 KAPPA: 0.7060\n",
       "Saving the best model at /mnt/diabetic_retinopathy_v3/models\n",
-      "Epoch time elapsed: 2m 40s\n",
-      "\n",
-      "Epoch 1/9\n",
-      "----------\n",
-      "Learning Rate: 0.0001\n",
-      "train Loss: 0.3173 KAPPA: 0.3527\n",
-      "val Loss: 0.2728 KAPPA: 0.4985\n",
-      "Saving the best model at /mnt/diabetic_retinopathy_v3/models\n",
-      "Epoch time elapsed: 2m 23s\n",
-      "\n",
-      "Epoch 2/9\n",
-      "----------\n",
-      "Learning Rate: 0.0001\n",
-      "train Loss: 0.2913 KAPPA: 0.4457\n",
-      "val Loss: 0.2755 KAPPA: 0.4238\n",
-      "Epoch time elapsed: 2m 23s\n",
-      "\n",
-      "Epoch 3/9\n",
-      "----------\n",
-      "Learning Rate: 0.0001\n",
-      "train Loss: 0.2832 KAPPA: 0.4758\n",
-      "val Loss: 0.2419 KAPPA: 0.5231\n",
-      "Saving the best model at /mnt/diabetic_retinopathy_v3/models\n",
-      "Epoch time elapsed: 2m 24s\n",
-      "\n",
-      "Epoch 4/9\n",
-      "----------\n",
-      "Learning Rate: 0.0001\n",
-      "train Loss: 0.2711 KAPPA: 0.5028\n",
-      "val Loss: 0.2542 KAPPA: 0.5903\n",
-      "Epoch time elapsed: 2m 22s\n",
-      "\n",
-      "Epoch 5/9\n",
-      "----------\n",
-      "Learning Rate: 0.0001\n",
-      "train Loss: 0.2668 KAPPA: 0.5285\n",
-      "val Loss: 0.2934 KAPPA: 0.3056\n",
-      "Epoch time elapsed: 2m 22s\n",
-      "\n",
-      "Epoch 6/9\n",
-      "----------\n",
-      "Learning Rate: 0.0001\n",
-      "train Loss: 0.2650 KAPPA: 0.5298\n",
-      "val Loss: 0.2435 KAPPA: 0.6205\n",
-      "Epoch time elapsed: 2m 22s\n",
-      "\n",
-      "Epoch 7/9\n",
-      "----------\n",
-      "Learning Rate: 0.0001\n",
-      "train Loss: 0.2533 KAPPA: 0.5588\n",
-      "val Loss: 0.2307 KAPPA: 0.6171\n",
-      "Saving the best model at /mnt/diabetic_retinopathy_v3/models\n",
-      "Epoch time elapsed: 2m 22s\n",
-      "\n",
-      "Epoch 8/9\n",
-      "----------\n",
-      "Learning Rate: 0.0001\n",
-      "train Loss: 0.2539 KAPPA: 0.5493\n",
-      "val Loss: 0.2216 KAPPA: 0.5985\n",
-      "Saving the best model at /mnt/diabetic_retinopathy_v3/models\n",
-      "Epoch time elapsed: 2m 27s\n",
-      "\n",
-      "Epoch 9/9\n",
-      "----------\n",
-      "Learning Rate: 0.0001\n",
-      "train Loss: 0.2508 KAPPA: 0.5617\n",
-      "val Loss: 0.2293 KAPPA: 0.5268\n",
-      "Epoch time elapsed: 2m 24s\n",
-      "\n",
-      "Training complete in 24m 9s\n",
-      "Best val loss: 0.221609\n",
-      "Let's use [0, 1, 2, 3] GPUs!\n",
-      "ResNet101Attention_Inp299-DatasetMeanStd-Data0.1-Bch64-ResNet101AttentionPre-None-Adam0001-SmoothL1Loss\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "Epoch 0/9\n",
-      "----------\n",
-      "Learning Rate: 0.0001\n",
-      "train Loss: 0.3415 KAPPA: 0.2500\n",
-      "val Loss: 0.2796 KAPPA: 0.3619\n",
-      "Saving the best model at /mnt/diabetic_retinopathy_v3/models\n",
-      "Epoch time elapsed: 2m 47s\n",
+      "Epoch time elapsed: 27m 60s\n",
       "\n",
       "Epoch 1/9\n",
       "----------\n",
