modified:   notebooks/DeepLearning_GridSearch.ipynb 	new file:   notebooks/core/loss_list.json 	deleted:    notebooks/core/loss_list.py 	new file:   notebooks/core/net_list.json 	deleted:    notebooks/core/net_list.py 	new file:   notebooks/core/optimizer_list.json 	deleted:    notebooks/core/optimizer_list.py 	new file:   notebooks/core/scheduler_list.json 	deleted:    notebooks/core/scheduler_list.py 	renamed:    notebooks/core/parameters.py -> notebooks/parameters/OLD_diabetic_retinopathy.py 	new file:   notebooks/parameters/diabetic_retinopathy.json 	modified:   notebooks/preprocess/preprocess.py

--- a/notebooks/DeepLearning_GridSearch.ipynb
+++ b/notebooks/DeepLearning_GridSearch.ipynb
@@ -11,23 +11,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/anaconda3/envs/python3/lib/python3.6/site-packages/matplotlib/font_manager.py:278: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
-      "  'Matplotlib is building the font cache using fc-list. '\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Internal Packages\n",
-    "from core.parameters import *\n",
-    "from core.net_list import NET_LIST\n",
-    "from core.scheduler_list import SCHEDULER_LIST\n",
-    "from core.optimizer_list import OPTIMIZER_LIST\n",
-    "from core.loss_list import LOSS_LIST\n",
     "from nets.ResNet50Attention import ResNet50Attention\n",
     "from nets.ResNet101Attention import ResNet101Attention\n",
     "from common.myfunctions import plot_confusion_matrix\n",
@@ -38,6 +24,7 @@
     "# Base Packages\n",
     "import os\n",
     "import glob\n",
+    "import json\n",
     "import copy\n",
     "import time\n",
     "import pandas as pd\n",
@@ -72,6 +59,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('core/net_list.json') as f:\n",
+    "    NET_LIST = json.load(f)\n",
+    "\n",
+    "with open('core/loss_list.json') as f:\n",
+    "    LOSS_LIST = json.load(f)\n",
+    "\n",
+    "with open('core/optimizer_list.json') as f:\n",
+    "    OPTIMIZER_LIST = json.load(f)\n",
+    "\n",
+    "with open('core/scheduler_list.json') as f:\n",
+    "    SCHEDULER_LIST = json.load(f)\n",
+    "    \n",
+    "with open('parameters/diabetic_retinopathy.json') as f:\n",
+    "    parameters = json.load(f)    "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -80,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -113,18 +122,18 @@
     }
    ],
    "source": [
-    "comb = len(INPUT_SIZES) * len(SAMPLE_FRACS) * len(BATCH_SIZES) * len(MODELS) * len(OPTIMIZERS) * len(SCHEDULERS) * len(LOSSES)\n",
+    "comb = len(parameters['input_sizes']) * len(parameters['sample_fracs']) * len(parameters['batch_sizes']) * len(parameters['models']) * len(parameters['optimizers']) * len(parameters['schedulers']) * len(parameters['losses'])\n",
     "print('Total Combinations:', comb)\n",
     "print()\n",
     "i=1\n",
     "\n",
-    "for inp in INPUT_SIZES:\n",
-    "    for frac in SAMPLE_FRACS:\n",
-    "        for bch in BATCH_SIZES:\n",
-    "            for m in MODELS:\n",
-    "                for o in OPTIMIZERS:\n",
-    "                    for s in SCHEDULERS:\n",
-    "                        for l in LOSSES:\n",
+    "for inp in parameters['input_sizes']:\n",
+    "    for frac in parameters['sample_fracs']:\n",
+    "        for bch in parameters['batch_sizes']:\n",
+    "            for m in parameters['models']:\n",
+    "                for o in parameters['optimizers']:\n",
+    "                    for s in parameters['schedulers']:\n",
+    "                        for l in parameters['losses']:\n",
     "                            model_name = f'{i}\\n Input Size: {str(inp)}\\n Dataset Frac.: {str(frac)}\\n Batch Size: {str(bch)}\\n Model: {m}\\n Scheduler: {s}\\n Optimizer: {o}\\n Loss: {l}\\n'\n",
     "                            print(model_name)\n",
     "                            i += 1"
@@ -139,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -155,10 +164,10 @@
     "if torch.cuda.is_available(): #GPU\n",
     "    is_cuda = True\n",
     "    \n",
-    "    if CUDA_DEVICES[0] == -1: # All GPUs\n",
-    "        CUDA_DEVICES = list(range(0, torch.cuda.device_count()))\n",
+    "    if parameters['cuda_devices'][0] == -1: # All GPUs\n",
+    "        parameters['cuda_devices'] = list(range(0, torch.cuda.device_count()))\n",
     "    \n",
-    "    cuda_list = ','.join([str(c) for c in CUDA_DEVICES])\n",
+    "    cuda_list = ','.join([str(c) for c in parameters['cuda_devices']])\n",
     "    \n",
     "    device = torch.device(\"cuda:{}\".format(cuda_list))\n",
     "    \n",
@@ -183,13 +192,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "class CustomDataset(Dataset):\n",
     "\n",
-    "    def __init__(self, data_dir, test_split, sample_frac, input_size, transform=None, phase='train', clear_cache=False):\n",
+    "    def __init__(self, data_dir, test_split, sample_frac, input_size, dst_dir, \n",
+    "                 seed, transform=None, phase='train', clear_cache=False):\n",
     "\n",
     "        self.input_size = input_size\n",
     "        self.transform = transform\n",
@@ -206,7 +216,7 @@
     "            ids.extend(img_list)\n",
     "            labels.extend([d] * len(img_list))\n",
     "            \n",
-    "        x_train, x_test, y_train, y_test = train_test_split(ids, labels, test_size = test_split, random_state = SEED)\n",
+    "        x_train, x_test, y_train, y_test = train_test_split(ids, labels, test_size = test_split, random_state = seed)\n",
     "        \n",
     "        # Sample Train Dataset\n",
     "        if sample_frac < 1.0:\n",
@@ -227,14 +237,14 @@
     "            self.y = y_test\n",
     "        \n",
     "        # Check for Preprocess Images\n",
-    "        prep.Preprocess(data_dir, self.x, self.y, input_size, clear_cache)\n",
+    "        prep.Preprocess(data_dir, self.x, self.y, input_size, clear_cache, parameters['directory']['numpy'])\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.y)\n",
     "\n",
     "    def __getitem__(self, idx):\n",
     "        \n",
-    "        img_name = os.path.join(DST_DATA_DIR, str(self.input_size), str(self.y[idx]), self.x[idx].split('.')[0] + '.npy')\n",
+    "        img_name = os.path.join(dst_dir, str(self.input_size), str(self.y[idx]), self.x[idx].split('.')[0] + '.npy')\n",
     "        \n",
     "        image = np.load(img_name)\n",
     "        \n",
@@ -256,31 +266,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getAugmentation(transform):\n",
+    "    \n",
+    "    for t in transform:\n",
+    "    \n",
+    "        transf_name = list(t.keys())[0]\n",
+    "    \n",
+    "        if transf_name == 'ColorJitter':\n",
+    "            print('aqui')\n",
+    "        \n",
+    "        if transf_name == 'RandomAffine':\n",
+    "            print('aqui')\n",
+    "        \n",
+    "        if transf_name == 'RandomRotation':\n",
+    "            print('aqui')\n",
+    "        \n",
+    "        if transf_name == 'RandomHorizontalFlip':\n",
+    "            print('aqui')\n",
+    "        \n",
+    "        if transf_name == 'RandomVerticalFlip':\n",
+    "            print('aqui')\n",
+    "        \n",
+    "        if transf_name == 'ToTensor':\n",
+    "            print('aqui')            \n",
+    "        \n",
+    "        if transf_name == 'Normalize':\n",
+    "            print('aqui')                        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "def getDataLoaders(input_size, sample_frac, batch_size):\n",
     "    \n",
-    "    train_transf = transforms.Compose(TRAIN_AUGMENTATION)\n",
-    "    test_transf = transforms.Compose(TEST_AUGMENTATION)\n",
+    "    train_transf = transforms.Compose(\n",
+    "        getAugmentation(parameters['data_augmentation']['train'])\n",
+    "    )\n",
+    "    \n",
+    "    test_transf = transforms.Compose(\n",
+    "        getAugmentation(parameters['data_augmentation']['test'])\n",
+    "    )\n",
     "\n",
-    "    train_dataset = CustomDataset(DATA_DIR, \n",
-    "                                  TEST_SPLIT, \n",
+    "    train_dataset = CustomDataset(parameters['directory']['data'], \n",
+    "                                  parameters['test_split'], \n",
     "                                  sample_frac, \n",
     "                                  input_size, \n",
+    "                                  parameters['directory']['numpy'],\n",
+    "                                  parameters['seed'],\n",
     "                                  transform=train_transf, \n",
     "                                  phase='train', \n",
-    "                                  clear_cache=CLEAR_ALL_DATA_BEFORE_PREPROCESS)\n",
+    "                                  clear_cache=parameters['clear_all_data_before_preprocess'])\n",
     "\n",
     "\n",
-    "    test_dataset = CustomDataset(DATA_DIR, \n",
-    "                                  TEST_SPLIT, \n",
+    "    test_dataset = CustomDataset(parameters['directory']['data'], \n",
+    "                                  parameters['test_split'], \n",
     "                                  sample_frac, \n",
     "                                  input_size, \n",
+    "                                  parameters['directory']['numpy'],\n",
+    "                                  parameters['seed'],\n",
     "                                  transform=test_transf, \n",
     "                                  phase='test', \n",
-    "                                  clear_cache=CLEAR_ALL_DATA_BEFORE_PREPROCESS)\n",
+    "                                  clear_cache=parameters['clear_all_data_before_preprocess'])\n",
     "\n",
     "    # Garregando os dados\n",
     "    train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, num_workers=0)\n",
@@ -311,7 +364,7 @@
     "\n",
     "    w_classes = distrib_freq.sum() / (NUM_CLASSES * distrib_freq)\n",
     "\n",
-    "    for l in LOSSES:\n",
+    "    for l in parameters['losses']:\n",
     "        if 'weight' in LOSS_LIST[l]:\n",
     "            LOSS_LIST[l]['weight'] = torch.from_numpy(w_classes).to(device)\n"
    ]
@@ -391,12 +444,12 @@
     "    # Obs.: when load model, the DataParallel is already in the model.\n",
     "    if is_cuda & (torch.cuda.device_count() > 1) & (not model_parameters['is_inception']):\n",
     "        \n",
-    "        if not CUDA_DEVICES:\n",
+    "        if not parameters['cuda_devices']:\n",
     "            print(\"Let's use\", torch.cuda.device_count(), \"GPUs!\")\n",
     "            model = nn.DataParallel(model) \n",
     "        else:\n",
-    "            print(\"Let's use\", CUDA_DEVICES, \"GPUs!\")\n",
-    "            model = nn.DataParallel(model, device_ids = CUDA_DEVICES) # When load checkpoint, the DataParallel is already in the model.\n",
+    "            print(\"Let's use\", parameters['cuda_devices'], \"GPUs!\")\n",
+    "            model = nn.DataParallel(model, device_ids = parameters['cuda_devices']) # When load checkpoint, the DataParallel is already in the model.\n",
     "    \n",
     "    # Frozen Layers\n",
     "    for name, param in model.named_parameters():\n",
@@ -823,29 +876,29 @@
     "model_name_list = []\n",
     "metric_list = []\n",
     "\n",
-    "for inp in INPUT_SIZES:\n",
+    "for inp in parameters['input_sizes']:\n",
     "    \n",
-    "    for frac in SAMPLE_FRACS:\n",
+    "    for frac in parameters['sample_fracs']:\n",
     "        \n",
-    "        for bch in BATCH_SIZES:\n",
+    "        for bch in parameters['batch_sizes']:\n",
     "        \n",
     "            dataloaders_dict = getDataLoaders(inp, frac, bch)\n",
     "\n",
-    "            for m in MODELS:\n",
+    "            for m in parameters['models']:\n",
     "\n",
     "                model_parameters = NET_LIST[m]\n",
     "                base_model = model_parameters['base_model']\n",
     "                model = getModel(m, NUM_CLASSES)\n",
     "\n",
-    "                for o in OPTIMIZERS:\n",
+    "                for o in parameters['optimizers']:\n",
     "\n",
     "                    optimizer = getOptimizer(o, model)\n",
     "\n",
-    "                    for s in SCHEDULERS:\n",
+    "                    for s in parameters['schedulers']:\n",
     "\n",
     "                        scheduler = getScheduler(s, optimizer)\n",
     "\n",
-    "                        for l in LOSSES:\n",
+    "                        for l in parameters['losses']:\n",
     "\n",
     "                            criterion = getLossFunction(l)\n",
     "\n",
