modified:   notebooks/DeepLearning_GridSearch.ipynb 	modified:   notebooks/core/optimizer_list.json

--- a/notebooks/DeepLearning_GridSearch.ipynb
+++ b/notebooks/DeepLearning_GridSearch.ipynb
@@ -205,6 +205,7 @@
     "\n",
     "        self.input_size = input_size\n",
     "        self.transform = transform\n",
+    "        self.dst_dir = dst_dir\n",
     "        self.x = []\n",
     "        self.y = []\n",
     "\n",
@@ -246,7 +247,7 @@
     "\n",
     "    def __getitem__(self, idx):\n",
     "        \n",
-    "        img_name = os.path.join(dst_dir, str(self.input_size), str(self.y[idx]), self.x[idx].split('.')[0] + '.npy')\n",
+    "        img_name = os.path.join(self.dst_dir, str(self.input_size), str(self.y[idx]), self.x[idx].split('.')[0] + '.npy')\n",
     "        \n",
     "        image = np.load(img_name)\n",
     "        \n",
@@ -586,7 +587,7 @@
     "        \n",
     "        optimizer = torch.optim.Adam(params_to_update, \n",
     "                                     lr = opt_parameters['lr'],\n",
-    "                                     betas = opt_parameters['betas'],\n",
+    "                                     betas = tuple(opt_parameters['betas']),\n",
     "                                     eps = opt_parameters['eps'],\n",
     "                                     weight_decay = opt_parameters['weight_decay'],\n",
     "                                     amsgrad = opt_parameters['amsgrad']\n",
@@ -745,11 +746,11 @@
    },
    "outputs": [],
    "source": [
-    "def train_model(model, model_name, loss_name, dataloaders, criterion, optimizer, scheduler, num_epochs=25, is_inception=False):\n",
+    "def train_model(model, model_name, loss_name, dataloaders, criterion, optimizer, scheduler, num_epochs=25, is_inception=False, save_best='loss'):\n",
     "\n",
     "    since = time.time()\n",
     "\n",
-    "    best_score = 0.0 if SAVE_BEST == 'metric' else float(\"inf\")\n",
+    "    best_score = 0.0 if save_best == 'metric' else float(\"inf\")\n",
     "    epoch_metric = 0.0\n",
     "    \n",
     "    print(model_name)\n",
@@ -876,22 +877,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'SEED' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-7ae9286e755b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mbch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mparameters\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'batch_sizes'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m             \u001b[0mdataloaders_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetDataLoaders\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfrac\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mm\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mparameters\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'models'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-7-7ac12a575dd6>\u001b[0m in \u001b[0;36mgetDataLoaders\u001b[0;34m(input_size, sample_frac, batch_size)\u001b[0m\n\u001b[1;32m     17\u001b[0m                                   \u001b[0mtransform\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrain_transf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m                                   \u001b[0mphase\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'train'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m                                   clear_cache=parameters['clear_all_data_before_preprocess'])\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-5-3e092c5c61d8>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data_dir, test_split, sample_frac, input_size, dst_dir, seed, transform, phase, clear_cache)\u001b[0m\n\u001b[1;32m     26\u001b[0m             \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'x'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'y'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m             \u001b[0mdf_sample\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfrac\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msample_frac\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mSEED\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m             \u001b[0mx_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_sample\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'x'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'SEED' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let's use [0, 1, 2, 3] GPUs!\n",
+      "Loading state dict from checkpoint \n",
+      "\t /mnt/diabetic_retinopathy/models/ResNet101Attention_Inp512-DatasetMeanStd-Data0.5-Bch64-ResNet101AttentionPre-None-Adam0001-SmoothL1Loss_loss0.16344905125054568.pt\n",
+      "ResNet101Attention_Inp512-DatasetMeanStd-Data0.5-Bch64-ResNet101AttentionPre-None-Adam0001-SmoothL1Loss\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "Epoch 0/9\n",
+      "----------\n",
+      "Learning Rate: 0.0001\n"
      ]
     }
    ],
@@ -906,6 +908,7 @@
     "        for bch in parameters['batch_sizes']:\n",
     "        \n",
     "            dataloaders_dict = getDataLoaders(inp, frac, bch)\n",
+    "            augmentation_tag = parameters['data_augmentation']['tag']\n",
     "\n",
     "            for m in parameters['models']:\n",
     "\n",
@@ -925,7 +928,7 @@
     "\n",
     "                            criterion = getLossFunction(l)\n",
     "\n",
-    "                            model_name = f'{base_model}_Inp{str(inp)}-{AUGMENTATION_TAG}-Data{str(frac)}-Bch{str(bch)}-{m}-{s}-{o}-{l}'\n",
+    "                            model_name = f'{base_model}_Inp{str(inp)}-{augmentation_tag}-Data{str(frac)}-Bch{str(bch)}-{m}-{s}-{o}-{l}'\n",
     "\n",
     "                            tensorboard = SummaryWriter(comment = model_name)\n",
     "\n",
@@ -941,7 +944,8 @@
     "                                optimizer, \n",
     "                                scheduler,\n",
     "                                num_epochs=parameters['num_epoch'], \n",
-    "                                is_inception=NET_LIST[m]['is_inception'])\n",
+    "                                is_inception=NET_LIST[m]['is_inception'],\n",
+    "                                save_best=parameters['save_best'])\n",
     "\n",
     "                            model_name_list.append(model_name)\n",
     "                            metric_list.append(best_score)\n"
