modified:   notebooks/DeepLearning_GridSearch.ipynb 	modified:   notebooks/parameters/diabetic_retinopathy.json

--- a/notebooks/DeepLearning_GridSearch.ipynb
+++ b/notebooks/DeepLearning_GridSearch.ipynb
@@ -104,7 +104,7 @@
       "\n",
       "1\n",
       " Input Size: 512\n",
-      " Dataset Frac.: 0.5\n",
+      " Dataset Frac.: 0.005\n",
       " Batch Size: 64\n",
       " Model: ResNet101AttentionPre\n",
       " Scheduler: None\n",
@@ -113,7 +113,7 @@
       "\n",
       "2\n",
       " Input Size: 512\n",
-      " Dataset Frac.: 0.5\n",
+      " Dataset Frac.: 0.005\n",
       " Batch Size: 64\n",
       " Model: ResNet50AttentionPre\n",
       " Scheduler: None\n",
@@ -746,7 +746,8 @@
    },
    "outputs": [],
    "source": [
-    "def train_model(model, model_name, loss_name, dataloaders, criterion, optimizer, scheduler, num_epochs=25, is_inception=False, save_best='loss'):\n",
+    "def train_model(model, model_name, model_dir, loss_name, dataloaders, criterion, optimizer, \n",
+    "                scheduler, num_epochs=25, is_inception=False, save_best='loss', metric='ACC'):\n",
     "\n",
     "    since = time.time()\n",
     "\n",
@@ -825,11 +826,11 @@
     "                \n",
     "            epoch_loss = running_loss / len(dataloaders[phase].dataset)\n",
     "            \n",
-    "            if METRIC:\n",
+    "            if metric:\n",
     "                epoch_metric = calcMetric(running_preds, running_labels)\n",
-    "                tensorboard.add_scalar('{} {}'.format(METRIC, phase), epoch_metric, epoch)\n",
+    "                tensorboard.add_scalar('{} {}'.format(metric, phase), epoch_metric, epoch)\n",
     "            \n",
-    "            print('{} Loss: {:.4f} {}: {:.4f}'.format(phase, epoch_loss, METRIC, epoch_metric))\n",
+    "            print('{} Loss: {:.4f} {}: {:.4f}'.format(phase, epoch_loss, metric, epoch_metric))\n",
     "            \n",
     "            # Write loss into Tensorboard\n",
     "            tensorboard.add_scalar('Loss {}'.format(phase), epoch_loss, epoch)\n",
@@ -842,19 +843,19 @@
     "                \n",
     "                save_flag = False\n",
     "                \n",
-    "                if SAVE_BEST == 'metric' and epoch_metric > best_score:\n",
+    "                if save_best == 'metric' and epoch_metric > best_score:\n",
     "                    \n",
     "                    best_score = epoch_metric\n",
     "                    save_flag = True\n",
     "                    \n",
-    "                elif SAVE_BEST == 'loss' and epoch_loss < best_score:\n",
+    "                elif save_best == 'loss' and epoch_loss < best_score:\n",
     "                    \n",
     "                    best_score = epoch_loss\n",
     "                    save_flag = True\n",
     "                \n",
     "                if save_flag:\n",
-    "                    print('Saving the best model at {}'.format(MODEL_DIR))\n",
-    "                    torch.save(model.state_dict(), MODEL_DIR + '/' + model_name + '_' + SAVE_BEST + str(best_score) + '.pt')\n",
+    "                    print('Saving the best model at {}'.format(model_dir))\n",
+    "                    torch.save(model.state_dict(), model_dir + '/' + model_name + '_' + save_best + str(best_score) + '.pt')\n",
     "            \n",
     "                epoch_time_elapsed = time.time() - epoch_since\n",
     "                print('Epoch time elapsed: {:.0f}m {:.0f}s'.format(epoch_time_elapsed // 60, epoch_time_elapsed % 60))\n",
@@ -863,7 +864,7 @@
     "\n",
     "    time_elapsed = time.time() - since\n",
     "    print('Training complete in {:.0f}m {:.0f}s'.format(time_elapsed // 60, time_elapsed % 60))\n",
-    "    print('Best val {}: {:4f}'.format(SAVE_BEST, best_score))\n",
+    "    print('Best val {}: {:4f}'.format(save_best, best_score))\n",
     "\n",
     "    return best_score\n"
    ]
@@ -881,22 +882,7 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Let's use [0, 1, 2, 3] GPUs!\n",
-      "Loading state dict from checkpoint \n",
-      "\t /mnt/diabetic_retinopathy/models/ResNet101Attention_Inp512-DatasetMeanStd-Data0.5-Bch64-ResNet101AttentionPre-None-Adam0001-SmoothL1Loss_loss0.16344905125054568.pt\n",
-      "ResNet101Attention_Inp512-DatasetMeanStd-Data0.5-Bch64-ResNet101AttentionPre-None-Adam0001-SmoothL1Loss\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "Epoch 0/9\n",
-      "----------\n",
-      "Learning Rate: 0.0001\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_name_list = []\n",
     "metric_list = []\n",
@@ -937,7 +923,8 @@
     "                            # Train and evaluate\n",
     "                            best_score = train_model(\n",
     "                                model, \n",
-    "                                model_name, \n",
+    "                                model_name,\n",
+    "                                parameters['directory']['model'],\n",
     "                                l,\n",
     "                                dataloaders_dict, \n",
     "                                criterion, \n",
