modified:   notebooks/DeepLearning_GridSearch.ipynb

--- a/notebooks/DeepLearning_GridSearch.ipynb
+++ b/notebooks/DeepLearning_GridSearch.ipynb
@@ -719,13 +719,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calcMetric(preds, labels):\n",
+    "def calcMetric(preds, labels, metric):\n",
     "    \n",
-    "    if METRIC == 'KAPPA':\n",
+    "    if metric == 'KAPPA':\n",
     "        preds = np.round(preds)\n",
     "        score = cohen_kappa_score(preds, labels, weights='quadratic')\n",
     "    \n",
-    "    elif METRIC == 'ACC':\n",
+    "    elif metric == 'ACC':\n",
     "        score = sum(preds == labels)\n",
     "        \n",
     "    return score"
@@ -827,7 +827,7 @@
     "            epoch_loss = running_loss / len(dataloaders[phase].dataset)\n",
     "            \n",
     "            if metric:\n",
-    "                epoch_metric = calcMetric(running_preds, running_labels)\n",
+    "                epoch_metric = calcMetric(running_preds, running_labels, metric)\n",
     "                tensorboard.add_scalar('{} {}'.format(metric, phase), epoch_metric, epoch)\n",
     "            \n",
     "            print('{} Loss: {:.4f} {}: {:.4f}'.format(phase, epoch_loss, metric, epoch_metric))\n",
