modified:   notebooks/DeepLearning_GridSearch.ipynb

--- a/notebooks/DeepLearning_GridSearch.ipynb
+++ b/notebooks/DeepLearning_GridSearch.ipynb
@@ -859,7 +859,9 @@
     "            \n",
     "                epoch_time_elapsed = time.time() - epoch_since\n",
     "                print('Epoch time elapsed: {:.0f}m {:.0f}s'.format(epoch_time_elapsed // 60, epoch_time_elapsed % 60))\n",
-    "            \n",
+    "                \n",
+    "                ####tensorboard.export_scalars_to_json(\"./all_scalars.json\")\n",
+    "                \n",
     "        print()\n",
     "\n",
     "    time_elapsed = time.time() - since\n",
@@ -981,6 +983,60 @@
     "                            model_name_list.append(model_name)\n",
     "                            metric_list.append(best_score)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/mnt/diabetic_retinopathy/logs'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parameters['directory']['logs']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensorboard.export_scalars_to_json(\"./all_scalars.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
